fix: update channel item background and icon color for improved visibility

--- a/src/app/main-content/header/header.component.scss
+++ b/src/app/main-content/header/header.component.scss
@@ -137,10 +137,10 @@ header {
   }
 
   .channel-item & {
-    background-color: #444df2;
+    background-color: #f5f5f5;
 
     mat-icon {
-      color: #ADB0D9;
+      color: #444df2;
     }
   }
 
